--- a/build.gradle
+++ b/build.gradle
@@ -26,8 +26,6 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-web-services'
 	implementation 'org.springframework.session:spring-session-jdbc'
-	//compileOnly 'org.projectlombok:lombok'
-//	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	runtimeOnly 'com.microsoft.sqlserver:mssql-jdbc'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
@@ -38,8 +36,15 @@ dependencies {
 	implementation 'com.github.salemebo:restful-api:0.2.8'
 	compileOnly group: 'org.projectlombok', name: 'lombok', version: '1.16.20'
 	runtimeOnly 'mysql:mysql-connector-java'
+	implementation group: 'io.springfox', name: 'springfox-swagger-ui'
+	implementation group: 'io.springfox', name: 'springfox-swagger2'
+	implementation group: 'io.springfox', name: 'springfox-boot-starter', version: '3.0.0'
+	implementation 'io.springfox:springfox-swagger2:3.0.0'
+	implementation 'io.springfox:springfox-swagger-ui:3.0.0'
+	implementation 'org.springframework.boot:spring-boot-starter-cache:2.6.4'
 }
 
 tasks.named('test') {
 	useJUnitPlatform()
 }
+
