--- a/build.gradle
+++ b/build.gradle
@@ -42,6 +42,10 @@ dependencies {
 	implementation 'io.springfox:springfox-swagger2:3.0.0'
 	implementation 'io.springfox:springfox-swagger-ui:3.0.0'
 	implementation 'org.springframework.boot:spring-boot-starter-cache:2.6.4'
+	implementation 'com.github.ben-manes.caffeine:caffeine:3.0.6'
+	implementation group: 'com.github.ben-manes.caffeine', name: 'caffeine', version: '3.0.6'
+	implementation group: 'org.springframework.data', name: 'spring-data-mongodb', version: '3.3.3'
+
 }
 
 tasks.named('test') {
