--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,8 @@
 #spring.datasource.url=jdbc:mysql://localhost:3306/cricketData
 #spring.datasource.username=root
 #spring.datasource.password=password
+
+## Caffeine Cache
+spring.cache.type = caffeine
+spring.cache.cache-names = matchCache , playerCache, teamCache
+spring.cache.caffeine.spec= initialCapacity = 100 , maximumSize = 500 , expireAfterAccess = 600s
